--- a/test3.ipynb
+++ b/test3.ipynb
@@ -50,7 +50,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>8236</td>\n",
-       "      <td>государственное бюджетное общеобразовательное ...</td>\n",
+       "      <td>государственное бюджетное образовательное учре...</td>\n",
        "      <td>797946035</td>\n",
        "      <td>2016-2017</td>\n",
        "      <td>Восточный административный округ</td>\n",
@@ -61,7 +61,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>8237</td>\n",
-       "      <td>государственное казенное общеобразовательное у...</td>\n",
+       "      <td>государственное казенное образовательное учреж...</td>\n",
        "      <td>797949150</td>\n",
        "      <td>2016-2017</td>\n",
        "      <td>Восточный административный округ</td>\n",
@@ -72,7 +72,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>8238</td>\n",
-       "      <td>государственное казенное общеобразовательное у...</td>\n",
+       "      <td>государственное казенное образовательное учреж...</td>\n",
        "      <td>797949275</td>\n",
        "      <td>2016-2017</td>\n",
        "      <td>Восточный административный округ</td>\n",
@@ -83,7 +83,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>8239</td>\n",
-       "      <td>частное учреждение общеобразовательная организ...</td>\n",
+       "      <td>частное учреждение образовательная организация...</td>\n",
        "      <td>797949425</td>\n",
        "      <td>2016-2017</td>\n",
        "      <td>Восточный административный округ</td>\n",
@@ -108,10 +108,10 @@
       ],
       "text/plain": [
        "     ID                                           EDU_NAME  global_id  \\\n",
-       "1  8236  государственное бюджетное общеобразовательное ...  797946035   \n",
-       "2  8237  государственное казенное общеобразовательное у...  797949150   \n",
-       "3  8238  государственное казенное общеобразовательное у...  797949275   \n",
-       "4  8239  частное учреждение общеобразовательная организ...  797949425   \n",
+       "1  8236  государственное бюджетное образовательное учре...  797946035   \n",
+       "2  8237  государственное казенное образовательное учреж...  797949150   \n",
+       "3  8238  государственное казенное образовательное учреж...  797949275   \n",
+       "4  8239  частное учреждение образовательная организация...  797949425   \n",
        "5  8240  автономная некоммерческая организация средняя ...  797949570   \n",
        "\n",
        "        YEAR                           AdmArea                   District  \\\n",
@@ -135,11 +135,11 @@
     }
    ],
    "source": [
-    "exams = pd.read_csv('data-2072-2024-04-15.csv', sep=';')\n",
+    "exams = pd.read_csv('exams.csv', sep=';')\n",
     "exams = exams.drop(index=0)\n",
     "exams = exams.drop(\"Unnamed: 8\", axis=1)\n",
     "exams['EDU_NAME'] = exams['EDU_NAME'].str.lower().str.strip().str.replace('«', '').str.replace('»', '') \\\n",
-    ".str.replace('  ', ' ')\n",
+    ".str.replace('  ', ' ').str.replace('\"', ' ').str.replace('общеобразовательн', 'образовательн')\n",
     "exams.head()"
    ]
   },
@@ -384,11 +384,11 @@
     }
    ],
    "source": [
-    "schools = pd.read_csv('data-2263-2024-07-08.csv', sep=';')\n",
+    "schools = pd.read_csv('schools.csv', sep=';')\n",
     "schools = schools.drop(index=0)\n",
     "schools = schools.drop(\"Unnamed: 26\", axis=1)\n",
     "schools['FullName'] = schools['FullName'].str.lower().str.strip().str.replace('«', '').str.replace('»', '') \\\n",
-    ".str.replace('  ', ' ')\n",
+    ".str.replace('  ', ' ').str.replace('\"', ' ').str.replace('общеобразовательн', 'образовательн')\n",
     "schools.head()"
    ]
   },
@@ -556,7 +556,7 @@
     }
    ],
    "source": [
-    "ecology = pd.read_csv('data-2457-2024-05-03.csv', sep=';')\n",
+    "ecology = pd.read_csv('ecology.csv', sep=';')\n",
     "ecology = ecology.drop(index=0)\n",
     "ecology = ecology.drop(\"Unnamed: 11\", axis=1)\n",
     "ecology.head()"
@@ -604,7 +604,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>8236</td>\n",
-       "      <td>государственное бюджетное общеобразовательное ...</td>\n",
+       "      <td>государственное бюджетное образовательное учре...</td>\n",
        "      <td>797946035</td>\n",
        "      <td>2016-2017</td>\n",
        "      <td>Восточный административный округ</td>\n",
@@ -617,33 +617,33 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>8237</td>\n",
-       "      <td>государственное казенное общеобразовательное у...</td>\n",
+       "      <td>государственное казенное образовательное учреж...</td>\n",
        "      <td>797949150</td>\n",
        "      <td>2016-2017</td>\n",
        "      <td>Восточный административный округ</td>\n",
        "      <td>район Богородское</td>\n",
        "      <td>14</td>\n",
        "      <td>47</td>\n",
-       "      <td>государственное казенное общеобразовательное у...</td>\n",
+       "      <td>государственное казенное образовательное учреж...</td>\n",
        "      <td>{coordinates=[[[[37.710083127, 55.825085846], ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>8238</td>\n",
-       "      <td>государственное казенное общеобразовательное у...</td>\n",
+       "      <td>государственное казенное образовательное учреж...</td>\n",
        "      <td>797949275</td>\n",
        "      <td>2016-2017</td>\n",
        "      <td>Восточный административный округ</td>\n",
        "      <td>район Вешняки</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>государственное казенное общеобразовательное у...</td>\n",
+       "      <td>государственное казенное образовательное учреж...</td>\n",
        "      <td>{coordinates=[[[[37.807984129, 55.726758653], ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>8239</td>\n",
-       "      <td>частное учреждение общеобразовательная организ...</td>\n",
+       "      <td>частное учреждение образовательная организация...</td>\n",
        "      <td>797949425</td>\n",
        "      <td>2016-2017</td>\n",
        "      <td>Восточный административный округ</td>\n",
@@ -672,10 +672,10 @@
       ],
       "text/plain": [
        "     ID                                           EDU_NAME  global_id  \\\n",
-       "0  8236  государственное бюджетное общеобразовательное ...  797946035   \n",
-       "1  8237  государственное казенное общеобразовательное у...  797949150   \n",
-       "2  8238  государственное казенное общеобразовательное у...  797949275   \n",
-       "3  8239  частное учреждение общеобразовательная организ...  797949425   \n",
+       "0  8236  государственное бюджетное образовательное учре...  797946035   \n",
+       "1  8237  государственное казенное образовательное учреж...  797949150   \n",
+       "2  8238  государственное казенное образовательное учреж...  797949275   \n",
+       "3  8239  частное учреждение образовательная организация...  797949425   \n",
        "4  8240  автономная некоммерческая организация средняя ...  797949570   \n",
        "\n",
        "        YEAR                           AdmArea                   District  \\\n",
@@ -694,8 +694,8 @@
        "\n",
        "                                            FullName  \\\n",
        "0                                                NaN   \n",
-       "1  государственное казенное общеобразовательное у...   \n",
-       "2  государственное казенное общеобразовательное у...   \n",
+       "1  государственное казенное образовательное учреж...   \n",
+       "2  государственное казенное образовательное учреж...   \n",
        "3                                                NaN   \n",
        "4                                                NaN   \n",
        "\n",
@@ -725,7 +725,7 @@
     {
      "data": {
       "text/plain": [
-       "1586"
+       "1585"
       ]
      },
      "execution_count": 6,
@@ -745,7 +745,7 @@
     {
      "data": {
       "text/plain": [
-       "3298"
+       "3299"
       ]
      },
      "execution_count": 7,
@@ -759,35 +759,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>global_id</th>\n",
+       "      <th>EDU_NAME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>797946035</td>\n",
+       "      <td>государственное бюджетное образовательное учреждение города москвы школа № 390 имени генерала п.и. батова</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>797949425</td>\n",
+       "      <td>частное учреждение образовательная организация московская интернациональная школа планета</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>797949570</td>\n",
+       "      <td>автономная некоммерческая организация средняя образовательная школа колибри</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>797949791</td>\n",
+       "      <td>государственное бюджетное образовательное учреждение города москвы центр образования № 1483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>797949792</td>\n",
+       "      <td>образовательная автономная некоммерческая организация лицей духовной культуры во имя преподобного серафима саровского</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4866</th>\n",
+       "      <td>2603023837</td>\n",
+       "      <td>автономная некоммерческая организация православная образовательная школа-пансион плесково</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4869</th>\n",
+       "      <td>2603023841</td>\n",
+       "      <td>федеральное государственное автономное образовательное учреждение высшего образования национальный исследовательский университет высшая школа экономики. лицей национального исследовательского университета высшая школа экономики</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4872</th>\n",
+       "      <td>2603023846</td>\n",
+       "      <td>образовательная автономная некоммерческая организация елизаветинская гимназия</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4878</th>\n",
+       "      <td>2603023853</td>\n",
+       "      <td>частное учреждение средняя образовательная школа славянско-англо-американская школа марина</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4880</th>\n",
+       "      <td>2603023857</td>\n",
+       "      <td>образовательная автономная некоммерческая организация школа права и экономики</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1585 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0                                                                                                                             государственное бюджетное общеобразовательное учреждение города москвы школа № 390 имени генерала п.и. батова\n",
-       "3                                                                                                                                             частное учреждение общеобразовательная организация московская интернациональная школа планета\n",
-       "4                                                                                                                                                           автономная некоммерческая организация средняя общеобразовательная школа колибри\n",
-       "6                                                                                                                                                            государственное бюджетное образовательное учреждение города москвы школа № 922\n",
-       "7                                                                                                                                           государственное бюджетное общеобразовательное учреждение города москвы центр образования № 1483\n",
-       "                                                                                                                       ...                                                                                                                 \n",
-       "4866                                                                                                                                          автономная некоммерческая организация православная общеобразовательная школа-пансион плесково\n",
-       "4869    федеральное государственное автономное образовательное учреждение высшего образования национальный исследовательский университет высшая школа экономики. лицей национального исследовательского университета высшая школа экономики\n",
-       "4872                                                                                                                                                      общеобразовательная автономная некоммерческая организация елизаветинская гимназия\n",
-       "4878                                                                                                                                         частное учреждение средняя общеобразовательная школа славянско-англо-американская школа марина\n",
-       "4880                                                                                                                                                      общеобразовательная автономная некоммерческая организация школа права и экономики\n",
-       "Name: EDU_NAME, Length: 1586, dtype: object"
+       "       global_id  \\\n",
+       "0      797946035   \n",
+       "3      797949425   \n",
+       "4      797949570   \n",
+       "7      797949791   \n",
+       "8      797949792   \n",
+       "...          ...   \n",
+       "4866  2603023837   \n",
+       "4869  2603023841   \n",
+       "4872  2603023846   \n",
+       "4878  2603023853   \n",
+       "4880  2603023857   \n",
+       "\n",
+       "                                                                                                                                                                                                                                 EDU_NAME  \n",
+       "0                                                                                                                               государственное бюджетное образовательное учреждение города москвы школа № 390 имени генерала п.и. батова  \n",
+       "3                                                                                                                                               частное учреждение образовательная организация московская интернациональная школа планета  \n",
+       "4                                                                                                                                                             автономная некоммерческая организация средняя образовательная школа колибри  \n",
+       "7                                                                                                                                             государственное бюджетное образовательное учреждение города москвы центр образования № 1483  \n",
+       "8                                                                                                                   образовательная автономная некоммерческая организация лицей духовной культуры во имя преподобного серафима саровского  \n",
+       "...                                                                                                                                                                                                                                   ...  \n",
+       "4866                                                                                                                                            автономная некоммерческая организация православная образовательная школа-пансион плесково  \n",
+       "4869  федеральное государственное автономное образовательное учреждение высшего образования национальный исследовательский университет высшая школа экономики. лицей национального исследовательского университета высшая школа экономики  \n",
+       "4872                                                                                                                                                        образовательная автономная некоммерческая организация елизаветинская гимназия  \n",
+       "4878                                                                                                                                           частное учреждение средняя образовательная школа славянско-англо-американская школа марина  \n",
+       "4880                                                                                                                                                        образовательная автономная некоммерческая организация школа права и экономики  \n",
+       "\n",
+       "[1585 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_edu_names = exams_gps.loc[exams_gps['geoData'].isna(), 'EDU_NAME'].copy()\n",
     "pd.set_option('display.max_colwidth', None)\n",
-    "filtered_edu_names"
+    "exams_gps.loc[exams_gps['geoData'].isna(), ['global_id', 'EDU_NAME']].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "967"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exams_gps['EDU_NAME'].nunique()"
    ]
   }
  ],
