--- a/test_1.ipynb
+++ b/test_1.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +69,7 @@
        "      <th>District</th>\n",
        "      <th>PASSES_OVER_220</th>\n",
        "      <th>PASSER_UNDER_160</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -82,6 +83,7 @@
        "      <td>район Богородское</td>\n",
        "      <td>5</td>\n",
        "      <td>19</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -93,6 +95,7 @@
        "      <td>район Богородское</td>\n",
        "      <td>14</td>\n",
        "      <td>47</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -104,6 +107,7 @@
        "      <td>район Вешняки</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -115,6 +119,7 @@
        "      <td>район Вешняки</td>\n",
        "      <td>0</td>\n",
        "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -126,6 +131,7 @@
        "      <td>район Восточное Измайлово</td>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -146,15 +152,15 @@
        "3  2016-2017  Восточный административный округ              район Вешняки   \n",
        "4  2016-2017  Восточный административный округ  район Восточное Измайлово   \n",
        "\n",
-       "   PASSES_OVER_220  PASSER_UNDER_160  \n",
-       "0                5                19  \n",
-       "1               14                47  \n",
-       "2                0                 1  \n",
-       "3                0                 6  \n",
-       "4                1                 5  "
+       "   PASSES_OVER_220  PASSER_UNDER_160      \n",
+       "0                5                19 NaN  \n",
+       "1               14                47 NaN  \n",
+       "2                0                 1 NaN  \n",
+       "3                0                 6 NaN  \n",
+       "4                1                 5 NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,28 +171,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "EDU_NAME\n",
-       "Государственное бюджетное общеобразовательное учреждение города Москвы «Школа № 939»                                                                                                                                                 7\n",
-       "Государственное бюджетное общеобразовательное учреждение города Москвы «Школа № 827»                                                                                                                                                 7\n",
-       "Государственное бюджетное общеобразовательное учреждение города Москвы «Школа № 2083»                                                                                                                                                7\n",
-       "Государственное бюджетное общеобразовательное учреждение города Москвы «Романовская школа»                                                                                                                                           7\n",
-       "Государственное бюджетное общеобразовательное учреждение города Москвы «Школа № 1241 «На Красной Пресне»                                                                                                                             7\n",
-       "                                                                                                                                                                                                                                    ..\n",
-       "Государственное бюджетное профессиональное образовательное учреждение города Москвы «Московское среднее специальное училище олимпийского резерва № 4 им. А.Я. Гомельского (техникум)» Департамента спорта и туризма города Москвы    1\n",
-       "Государственное бюджетное общеобразовательное учреждение города Москвы «Школа с углубленным изучением английского языка № 1287»                                                                                                      1\n",
-       "Государственное бюджетное образовательное учреждение города Москвы «Центр образования «Школа здоровья» № 1679                                                                                                                        1\n",
-       "Государственное бюджетное общеобразовательное учреждение города Москвы «Центр спорта и образования «Самбо-70» Департамента спорта и туризма города Москвы                                                                            1\n",
-       "Автономная некоммерческая организация средняя общеобразовательная школа «Ювенес»                                                                                                                                                     1\n",
+       "Государственное казенное общеобразовательное учреждение города Москвы «Специальная (коррекционная) общеобразовательная школа-интернат № 31»                                                             7\n",
+       "Автономная некоммерческая организация средняя Общеобразовательная школа «Колибри»                                                                                                                       7\n",
+       "Государственное бюджетное общеобразовательное учреждение города Москвы «Школа № 1324»                                                                                                                   7\n",
+       "Государственное бюджетное общеобразовательное учреждение города Москвы «Школа № 1798 «Феникс»                                                                                                           7\n",
+       "Частное учреждение средняя общеобразовательная школа «Славянско-англо-американская школа «Марина»                                                                                                       7\n",
+       "                                                                                                                                                                                                       ..\n",
+       "Государственное бюджетное общеобразовательное учреждение города Москвы школа № 825 имени В.А. Караковского                                                                                              1\n",
+       "Автономная некоммерческая организация высшего образования «МОСКОВСКИЙ МЕЖДУНАРОДНЫЙ УНИВЕРСИТЕТ»                                                                                                        1\n",
+       "Государственное бюджетное общеобразовательное учреждение города Москвы «Школа № 1502 Энергия»                                                                                                           1\n",
+       "Государственное бюджетное профессиональное образовательное учреждение города Москвы «Московское среднее специальное спортивное училище № 4 имени А.Я. Гомельского» Департамента спорта города Москвы    1\n",
+       "Автономная некоммерческая организация средняя общеобразовательная школа «Ювенес»                                                                                                                        1\n",
        "Name: count, Length: 1013, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
