del wrong comment

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "def download(url)->str:\n",
-    "    response = requests.get(url) # Запрос к API Яндекс.Организации\n",
+    "    response = requests.get(url) \n",
     "    if response.status_code == 200:\n",
     "        content_disposition = response.headers.get(\"Content-Disposition\")\n",
     "        if content_disposition:\n",
