--- a/main.ipynb
+++ b/main.ipynb
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
        "1525  Нижегородский район               8               31    None  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,6 +1358,40 @@
    "source": [
     "pd.set_option('display.max_colwidth', None)\n",
     "exams[exams['geoData'].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4884 entries, 1 to 4884\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   ID                4884 non-null   object\n",
+      " 1   EDU_NAME          4884 non-null   object\n",
+      " 2   global_id         4884 non-null   object\n",
+      " 3   YEAR              4884 non-null   object\n",
+      " 4   AdmArea           4884 non-null   object\n",
+      " 5   District          4884 non-null   object\n",
+      " 6   PASSES_OVER_220   4884 non-null   object\n",
+      " 7   PASSER_UNDER_160  4884 non-null   object\n",
+      " 8   geoData           4884 non-null   object\n",
+      "dtypes: object(9)\n",
+      "memory usage: 343.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ручное добавление одной школы\"\n",
+    "exams.loc[exams['EDU_NAME'] == \"государственное бюджетное образовательное учреждение города москвы школа 439 интеллект\", 'geoData'] = \"{'type': 'Point', 'coordinates': [37.745376, 55.731212]}\"\n",
+    "exams.info()"
    ]
   },
   {
