--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4821,9 +4821,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'download' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m filename \u001b[38;5;241m=\u001b[39m \u001b[43mdownload\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://data.mos.ru/odata/export/catalog?idFile=218826\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m csvname \u001b[38;5;241m=\u001b[39m unzip(filename)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'download' is not defined"
+     ]
+    }
+   ],
    "source": [
     "filename = download(\"https://data.mos.ru/odata/export/catalog?idFile=218826\")\n",
     "csvname = unzip(filename)"
@@ -7333,7 +7345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
