eco dataset analisys for columns fortmat should to be

--- a/02.ipynb
+++ b/02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "id": "cca8467d",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,14 @@
     "import requests\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from datetime import date\n",
     "from decimal import Decimal\n",
     "# from tokens import YANDEX_ORG # Раскоменить для работы с API Яндекс.Организации и получения координат"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "e53c5526",
    "metadata": {},
    "outputs": [],
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "2074a180",
    "metadata": {},
    "outputs": [
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "aee0b7d7",
    "metadata": {
     "scrolled": true
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "8da1debd",
    "metadata": {},
    "outputs": [
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "aa484557",
    "metadata": {},
    "outputs": [
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "9ef14fbe",
    "metadata": {},
    "outputs": [
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "id": "125450bc",
    "metadata": {},
    "outputs": [
@@ -506,7 +507,7 @@
     }
    ],
    "source": [
-    "ecology_capital  = get_dataset('https://data.mos.ru/odata/export/catalog?idFile=218822')"
+    "eco_capital  = get_dataset('https://data.mos.ru/odata/export/catalog?idFile=218822')"
    ]
   },
   {
@@ -531,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "15249593",
    "metadata": {},
    "outputs": [
@@ -587,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "f1e4ff89",
    "metadata": {},
    "outputs": [
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "83e28855",
    "metadata": {},
    "outputs": [
@@ -743,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "676c8a08",
    "metadata": {},
    "outputs": [
@@ -804,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "e9037ce9",
    "metadata": {},
    "outputs": [
@@ -861,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "d828e772",
    "metadata": {},
    "outputs": [
@@ -922,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "78358571",
    "metadata": {},
    "outputs": [
@@ -965,7 +966,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1838/3048450166.py:24: DtypeWarning: Columns (0,3,7,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_1769/3048450166.py:24: DtypeWarning: Columns (0,3,7,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dataset = pd.read_csv(filenames[0], sep=';', encoding=encoding)\n"
      ]
     }
@@ -996,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "eadc5b15",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "f1210ebc",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "06aa9eb1",
    "metadata": {},
    "outputs": [
@@ -1226,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "dcab6ef5",
    "metadata": {},
    "outputs": [
@@ -1305,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "8851972a",
    "metadata": {},
    "outputs": [
@@ -1423,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "id": "865f8d49",
    "metadata": {
     "scrolled": true
@@ -1456,7 +1457,7 @@
     }
    ],
    "source": [
-    "eco_gastations = get_dataset('https://data.mos.ru/odata/export/catalog?idFile=215812')"
+    "eco_gasstations = get_dataset('https://data.mos.ru/odata/export/catalog?idFile=215812')"
    ]
   },
   {
@@ -1531,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 88,
    "id": "76ccfcac",
    "metadata": {},
    "outputs": [
@@ -1563,7 +1564,7 @@
     }
    ],
    "source": [
-    "eco_bad_gastations = get_dataset('https://data.mos.ru/odata/export/catalog?idFile=215808')"
+    "eco_bad_gasstations = get_dataset('https://data.mos.ru/odata/export/catalog?idFile=215808')"
    ]
   },
   {
@@ -1621,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "id": "4e17f0c8",
    "metadata": {},
    "outputs": [
@@ -1704,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "id": "79f197a7",
    "metadata": {},
    "outputs": [
@@ -1762,9 +1763,9 @@
     "    <th>№</th><th>Датасет</th><th>Дата начла</th><th>Дата конца</th><th>Событие</th><th>Координаты</th>\n",
     "  </tr>\n",
     "  <tr style=\"color: green;\"><td>1</td><td>eco_air</td><td>Date</td><td>Date</td><td>Results</td><td>geoData</td></tr>\n",
-    "  <tr style=\"color: red;\"><td>2</td><td>eco_mean</td><td>Period</td><td>Period</td><td>Parametr</td><td>Location</td></tr>\n",
+    "  <tr style=\"color: red;\"><td>2</td><td>eco_mean</td><td>Period</td><td>Period</td><td>Parameter</td><td>Location</td></tr>\n",
     "  <tr style=\"color: green;\"><td>3</td><td>eco_noise</td><td>Date</td><td>Date</td><td>Results</td><td>geoData</td></tr>\n",
-    "  <tr style=\"color: yellow;\"><td>4</td><td>eco_dirt</td><td>Year</td><td>Year</td><td>PolutionLevel</td><td>geoData</td></tr>\n",
+    "  <tr style=\"color: yellow;\"><td>4</td><td>eco_dirt</td><td>Year</td><td>Year</td><td>PollutionLevel</td><td>geoData</td></tr>\n",
     "  <tr style=\"color: green;\"><td>5</td><td>eco_digging</td><td>WorkStartDate</td><td>WorkEndDate</td><td>WorkType</td><td>geoData</td></tr>\n",
     "  <tr style=\"color: red;\"><td>6</td><td>ecology_capital</td><td>StartDateActual</td><td>EndDateActual</td><td>WorkName</td><td>ObjectAddress</td></tr>\n",
     "  <tr style=\"color: green;\"><td>7</td><td>ecohouselines</td><td>ActualStartDate</td><td>ActualEndDate</td><td>WorkReason</td><td>geoData</td></tr>\n",
@@ -1779,10 +1780,68 @@
     "  <tr style=\"color: gold;\"><td>16</td><td>eco_factories</td><td>0</td><td>now()</td><td>Specialization</td><td>geoData</td></tr>\n",
     "  <tr style=\"color: gold;\"><td>17</td><td>eco_markets</td><td>0</td><td>now()</td><td>EntryState</td><td>geoData</td></tr>\n",
     "  <tr style=\"color: gold;\"><td>18</td><td>eco_autostations</td><td>0</td><td>now()</td><td>BusDestination</td><td>geoData</td></tr>\n",
-    "  <tr style=\"color: gold;\"><td>19</td><td>eco_gastations</td><td>0</td><td>now()</td><td>Owner</td><td>geoData</td></tr>\n",
-    "  <tr style=\"color: green;\"><td>20</td><td>ecobadgastations</td><td>TestDate</td><td>TestDate</td><td>Violations</td><td>geoData</td></tr>\n",
+    "  <tr style=\"color: gold;\"><td>19</td><td>eco_gasstations</td><td>0</td><td>now()</td><td>Owner</td><td>geoData</td></tr>\n",
+    "  <tr style=\"color: green;\"><td>20</td><td>ecobadgasstations</td><td>TestDate</td><td>TestDate</td><td>Violations</td><td>geoData</td></tr>\n",
     "  <tr style=\"color: green;\"><td>21</td><td>ecotobuild</td><td>GPZUDocumentDate</td><td>now()</td><td>EntryAddReason</td><td>geoData</td></tr>\n",
     "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "e17aaaf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 11.03.2016 11.03.2016 Содержание загрязняющих веществ в атмосферном воздухе на жилой территории не превысило предельно допустимых максимальных разовых нормативов. {coordinates=[37.746472, 55.659195], type=Point}\n",
+      "2 02.2016 02.2016 Оксид углерода улица Ротерта, дом 4, строение 5\n",
+      "3 06.09.2016 06.09.2016 Выявлены превышения нормативов допустимого уровня шума от автотранспорта. {coordinates=[37.634479, 55.70877], type=Point}\n",
+      "4 2016 2016 минимальный {coordinates=[37.150715207, 55.976782064], type=Point}\n",
+      "5 22.02.2021 30.09.2024 1. Земляные работы {coordinates=[[37.58037861, 55.825088698], [37.580234128, 55.824253023], [37.579996429, 55.824365685], [37.58015831, 55.82440844], [37.580110955, 55.824520978], [37.579997166, 55.824724637], [37.579883299, 55.824890793], [37.581054021, 55.824932887], [37.580624454, 55.8243117], [37.580910526, 55.824579387], [37.580834711, 55.824734804], [37.580720825, 55.824890246], [37.580606916, 55.825034973], [37.580558908, 55.82483142], [37.580520562, 55.824697508]], type=MultiPoint}\n",
+      "6 10.08.2015 31.10.2015 Ремонт Цоколь nested data\n",
+      "7 09.07.2022 09.07.2022 Заявка на портал «Наш город» {coordinates=[[37.543292344, 55.91761981], [37.543714328, 55.919591187]], type=MultiPoint}\n",
+      "8 25.02.2021 05.09.2022 Работы по капитальному ремонту городской поликлиники {coordinates=[37.542727925, 55.756209523], type=Point}\n",
+      "9 14.08.2020 08.10.2020 текущий ремонт асфальтобетонного покрытия {coordinates=[[[37.555009201, 55.764145825], [37.55523361, 55.764130143], [37.555469645, 55.764852984], [37.555888069, 55.765439715], [37.556891215, 55.766622223], [37.556703461, 55.766740169], [37.556193841, 55.766050631], [37.555839789, 55.765630249], [37.555249703, 55.764834837], [37.555008305, 55.76414829]]], type=MultiLineString}\n",
+      "10 02.07.2018 31.12.2019 Создание и благоустройство парков и озелененных территорий {coordinates=[[[37.688792534, 55.651629655], [37.684838958, 55.653333531], [37.682167478, 55.651888237], [37.679356523, 55.650210839], [37.674285807, 55.652873068], [37.673034556, 55.654006493], [37.672806568, 55.654380692], [37.672736831, 55.654692332], [37.672683187, 55.654975915], [37.672661729, 55.655470285], [37.681802697, 55.655094201], [37.689055391, 55.651818473], [37.688792534, 55.651629655]]], type=Polygon}\n",
+      "11 14.05.2021 31.12.2021 Благоустройство территорий, прилегающих к станциям метро {coordinates=[[[37.606694698, 55.810915197], [37.602059841, 55.813869201], [37.602564096, 55.81405608], [37.602671385, 55.813977712], [37.602456808, 55.813881258], [37.604817152, 55.812259598], [37.605192661, 55.812126969], [37.605611086, 55.811849651], [37.606018782, 55.812048596], [37.606179714, 55.811946109], [37.605868578, 55.811753192], [37.606523037, 55.81129501], [37.607671022, 55.810505235], [37.607477903, 55.810420831], [37.606694698, 55.810915197]]], type=Polygon}\n",
+      "12 15.04.2022 15.11.2022 Цветник Устройство район Бибирево\n",
+      "13 16.04.2021 10.08.2021 Замена Бортовой (бордюрный) камень Алексеевский район\n",
+      "14 15.06.2020 30.09.2020 Работы по благоустройству улицы {coordinates=[[[37.632991659, 55.770565324], [37.633018481, 55.770622657], [37.633662211, 55.770572868], [37.633823144, 55.771005881], [37.633935796, 55.77099532], [37.633868741, 55.77064906], [37.634800809, 55.77054835], [37.634938943, 55.770827848], [37.635063665, 55.770816155], [37.635641011, 55.770713749], [37.635704378, 55.770816438], [37.636181308, 55.770735013], [37.636071086, 55.770389529], [37.636392218, 55.77034993], [37.636547419, 55.770683181], [37.636343884, 55.770727395], [37.636387112, 55.770856099], [37.636537628, 55.770966698], [37.637133234, 55.772084141], [37.637372029, 55.772051441], [37.637003264, 55.771229433], [37.636741788, 55.770407408], [37.637032964, 55.770289954], [37.637554061, 55.770617472], [37.637739508, 55.770515687], [37.637509939, 55.770284305], [37.638224508, 55.770113273], [37.639000475, 55.769957612], [37.639025423, 55.77020027], [37.639404422, 55.770563627], [37.639692291, 55.770817412], [37.641267621, 55.770081446], [37.640003366, 55.769478058], [37.640497766, 55.76927896], [37.640434267, 55.769266955], [37.640362661, 55.769231003], [37.640873909, 55.768972006], [37.64244731, 55.769763142], [37.642776167, 55.769697275], [37.640915859, 55.768721641], [37.640740461, 55.76880062], [37.640801097, 55.7688796], [37.640621962, 55.769013416], [37.64045681, 55.768931001], [37.640139526, 55.769108308], [37.639977026, 55.769004238], [37.640565544, 55.768610472], [37.640467418, 55.76849433], [37.639538468, 55.768947138], [37.639263978, 55.769049894], [37.63989071, 55.769333709], [37.639366743, 55.769539533], [37.638879453, 55.769213943], [37.638756944, 55.769250468], [37.639017927, 55.769577623], [37.637394125, 55.770099153], [37.637164556, 55.769831557], [37.636890012, 55.769847501], [37.636963195, 55.770120795], [37.636744782, 55.770172499], [37.636661946, 55.770034151], [37.63634607, 55.770071282], [37.636631634, 55.770033893], [37.636334533, 55.770069515], [37.636402213, 55.77029826], [37.634877252, 55.770424254], [37.633753406, 55.770515535], [37.633753406, 55.770506951], [37.632991659, 55.770565324]]], type=Polygon}\n",
+      "15 0 2024-07-17 контейнерная площадка {\"coordinates\":[37.521087,55.669857],\"type\":\"Point\"}\n",
+      "16 0 2024-07-17 Пищевая {coordinates=[37.500640518, 55.883021186], type=Point}\n",
+      "17 0 2024-07-17 активна {\"coordinates\":[37.521087,55.669857],\"type\":\"Point\"}\n",
+      "18 0 17.07.2024 Республика Дагестан, Республика Ингушетия, Республика Калмыкия, Республика Крым, Республика Марий Эл, Республика Мордовия, Чеченская Республика, Калужская область, Камчатский край, Краснодарский край, Ставропольский край, Белгородская область, Волгоградская область, Воронежская область, Курская область, Липецкая область, Орловская область, Пензенская область, Ростовская область, Самарская область, Саратовская область, Тамбовская область, Тульская область, город Севастополь, Кабардино - Балкарская Республика, Республика Северная Осетия - Алания, Донецкая Народная Республика, Луганская Народная Республика, Херсонская область, Запорожская область {coordinates=[37.624292, 55.656216], type=Point}\n",
+      "19 0 17.07.2024 ОАО «РН-Москва» {coordinates=[37.623636836, 55.858348644], type=Point}\n",
+      "20 14.05.2015 14.05.2015 nested data {coordinates=[37.172439523, 55.343229037], type=Point}\n",
+      "21 17.07.2024 08.09.2010 новый объект {coordinates=[37.619060188, 55.817768093], type=Point}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1, *eco_air[['Date', 'Date', 'Results', 'geoData']].iloc[0].values)\n",
+    "print(2, *eco_mean[['Period', 'Period', 'Parameter', 'Location']].iloc[0].values)\n",
+    "print(3, *eco_noise[['Date', 'Date', 'Results', 'geoData']].iloc[0].values)\n",
+    "print(4, *eco_dirt[['Year', 'Year', 'PollutionLevel', 'geoData']].iloc[0].values)\n",
+    "print(5, *eco_digging[['WorkStartDate', 'WorkEndDate', 'WorkType', 'geoData']].iloc[0].values)\n",
+    "print(6, *eco_capital[['StartDateActual', 'EndDateActual', 'WorkName', 'ObjectAddress']].iloc[0].values)\n",
+    "print(7, *eco_house_lines[['ActualStartDate', 'ActualEndDate', 'WorkReason', 'geoData']].iloc[0].values)\n",
+    "print(8, *eco_clinics[['ActualStartDate', 'ActualEndDate', 'WorkType', 'geoData']].iloc[0].values)\n",
+    "print(9, *eco_roads[['ActualBeginDate', 'ActualEndDate', 'WorksType', 'geoData']].iloc[0].values)\n",
+    "print(10, *eco_parks[['StartDateActual', 'EndDateActual', 'WorkType', 'geoData']].iloc[0].values)\n",
+    "print(11, *eco_transports[['ActualStartDate', 'ActualEndDate', 'WorkType', 'geoData']].iloc[0].values)\n",
+    "print(12, *eco_city_places[['StartDateActual', 'EndDateActual', 'WorkName', 'District']].iloc[0].values)\n",
+    "print(13, *eco_live_area[['StartDateActual', 'EndDateActual', 'WorkName', 'District']].iloc[0].values)\n",
+    "print(14, *eco_streets[['ActualStartDate', 'ActualEndDate', 'WorkType', 'geoData']].iloc[0].values)\n",
+    "print(15, 0, date.today(), *eco_trashes[['YardType', 'geoData']].iloc[0].values)\n",
+    "print(16, 0, date.today(), *eco_factories[['Specialization', 'geoData']].iloc[0].values)\n",
+    "print(17, 0, date.today(), *eco_markets[['EntryState', 'geoData']].iloc[0].values)\n",
+    "print(18, 0, date.today().strftime(\"%d.%m.%Y\"), *eco_autostations[['BusDestination', 'geoData']].iloc[0].values)\n",
+    "print(19, 0, date.today().strftime(\"%d.%m.%Y\"), *eco_gasstations[['Owner', 'geoData']].iloc[0].values)\n",
+    "print(20, *eco_bad_gasstations[['TestDate', 'TestDate', 'Violations', 'geoData']].iloc[0].values)\n",
+    "print(21, date.today().strftime(\"%d.%m.%Y\"), *eco_to_build[['GPZUDocumentDate', 'EntryAddReason', 'geoData']].iloc[0].values)"
    ]
   }
  ],
