know_how_to_make_ecology_dataset

--- a/01.ipynb
+++ b/01.ipynb
@@ -1,8 +1,57 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Анализ факторов экологии на результаты ЕГЭ\n",
+    "\n",
+    "## ЕГЭ\n",
+    "\n",
+    "https://ivo.garant.ru/#/document/406882488\n",
+    "\n",
+    "### Досрочный период\n",
+    "\n",
+    "22 марта (пятница) — география, литература;\n",
+    "26 марта (вторник) — русский язык;\n",
+    "29 марта (пятница) — ЕГЭ по математике базового уровня, ЕГЭ по математике профильного уровня;\n",
+    "2 апреля (вторник) — биология, иностранные языки (английский, испанский, китайский, немецкий, французский) (письменная часть), физика;\n",
+    "5 апреля (пятница) — иностранные языки (английский, испанский, китайский, немецкий, французский) (устная часть);\n",
+    "9 апреля (вторник) — информатика, обществознание;\n",
+    "12 апреля (пятница) — история, химия.\n",
+    "\n",
+    "### Резервные дни\n",
+    "\n",
+    "15 апреля (понедельник) — русский язык;\n",
+    "18 апреля (четверг) — ЕГЭ по математике базового уровня, ЕГЭ по математике профильного уровня;\n",
+    "19 апреля (пятница) — биология, иностранные языки (английский, испанский, китайский, немецкий, французский) (письменная часть), литература, обществознание, физика;\n",
+    "22 апреля (понедельник) — география, иностранные языки (английский, испанский, китайский, немецкий, французский) (устная часть), информатика, история, химия;\n",
+    "\n",
+    "Основной период\n",
+    "\n",
+    "23 мая (четверг) — география, литература, химия;\n",
+    "28 мая (вторник) — русский язык;\n",
+    "29 мая (среда) — русский язык;\n",
+    "31 мая (пятница) — ЕГЭ по математике базового уровня, ЕГЭ по математике профильного уровня;\n",
+    "1 июня (суббота) — ЕГЭ по математике базового уровня, ЕГЭ по математике профильного уровня;\n",
+    "4 июня (вторник) — обществознание, физика;\n",
+    "7 июня (пятница) — иностранные языки (английский, испанский, китайский, немецкий, французский) (устная часть), информатика;\n",
+    "8 июня (суббота) — иностранные языки (английский, испанский, китайский, немецкий, французский) (устная часть), информатика;\n",
+    "11 июня (вторник) — биология, иностранные языки (английский, испанский, китайский, немецкий, французский) (письменная часть), история.\n",
+    "\n",
+    "\n",
+    "### Дополнительный период\n",
+    "\n",
+    "4 сентября (среда) — русский язык;\n",
+    "9 сентября (понедельник) — ЕГЭ по математике базового уровня.\n",
+    "23 сентября (понедельник) — ЕГЭ по математике базового уровня, русский язык.\n",
+    "\n",
+    "ЕГЭ начинают сдавать с марта и заканчивают в сентябре"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1053,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exams.to_csv('exams.csv', index=False, encoding='utf-8')"
+    "exams.to_csv('exams.csv', index=False, encoding='utf-8', sep=';')"
    ]
   }
  ],
